<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:padding="2dp">

    <!-- Selector 1: Home -->
    <TextView
        android:id="@+id/selector_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:drawableTopCompat="@drawable/home_icon"
        android:contentDescription="@string/icon_description_home"
        android:gravity="center"
        android:text="@string/label_home" />

    <!-- Selector 2: Search -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:drawableTopCompat="@drawable/search_icon"
        android:contentDescription="@string/icon_description_search"
        android:gravity="center"
        android:text="@string/label_search"/>

</LinearLayout>
