<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Imagen central -->
        <ImageView
            android:id="@+id/central_image"
            android:layout_width="295dp"
            android:layout_height="299dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/vinyl_image"
            android:contentDescription="@string/central_image_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Texto "Acerca de la app" -->
        <TextView
            android:id="@+id/acerca_de_app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acerca_de_app_text"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/central_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
